# Nebulabun

./: .gitignore  README.md  example.html  package.json  readme-jp.md
.cursor/rules/: project-rule.mdc
app/bun/: ipc.ts  window.ts
app/rust/: Cargo.toml
app/rust/src/: lib.rs
app/zig/: build.zig  build.zig.zon
app/zig/src/: main.zig
cli/: index.ts
test/: readme.md
