[package]
name = "nebulabun-webview"
version = "0.1.0"
edition = "2021"

[lib]
name = "nebulabun_webview"
crate-type = ["cdylib"]

[dependencies]
webview2-com = "0.19"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
